--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
   <h4>Lorem ipsum</h4>
   <h5>Lorem ipsum</h5>
   <h6>Lorem ipsum</h6>
+
+  <p>¿Cómo harías para agregar el texto promocional? 
+¿Te has dado cuenta que dentro del mismo texto hay algunas 
+palabras que tienen un <b>mayor énfasis</b>  (formato en negrita)? 
+¿Cómo harías para cambiar el formato de solo esas palabras?</p>
 </body>
 </html>
