--- a/index.html
+++ b/index.html
@@ -18,5 +18,22 @@
 ¿Te has dado cuenta que dentro del mismo texto hay algunas 
 palabras que tienen un <b>mayor énfasis</b>  (formato en negrita)? 
 ¿Cómo harías para cambiar el formato de solo esas palabras?</p>
+
+<!-- <input type="email"> -->
+<form action="">
+    <input type="email"><br>
+    <button type="submit">Enviar &rarr;</button>
+</form>
+
+<div>
+    <h2>Identifiquese</h2>
+    Nombre:  <input type="text" placeholder="Nombre"><br><br>
+    Apellido: <input type="text" placeholder="Apellido"><br><br>
+    Edad: <input type="number" placeholder="Edad" min="18" max="64"><br><br>
+    Correo: <input type="email" placeholder="Correo"><br><br>
+    Contraseña: <input type="password" placeholder="Contraseña"><br><br>
+    <button type="submit">Enviar &rarr;</button>
+</div>
+
 </body>
 </html>
